<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/padding90sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rvConstraintGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundGoal"
                android:paddingBottom="@dimen/padding20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGoalList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_goal_detail"
                    tools:orientation="horizontal" />

                <TextView
                    android:id="@+id/textCountGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin15sp"
                    android:layout_marginTop="@dimen/margin20sp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:text="@string/target_goal_unit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txtDescriptionSaving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20sp"
                    android:layout_marginEnd="@dimen/margin15sp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:text="@string/title_saving"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtSaving" />

                <TextView
                    android:id="@+id/txtSaving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20sp"
                    android:layout_marginEnd="@dimen/margin15sp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize25dp"
                    app:layout_constraintEnd_toStartOf="@+id/txtUnit"
                    app:layout_constraintTop_toBottomOf="@+id/rvGoalList" />

                <TextView
                    android:id="@+id/txtUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20sp"
                    android:layout_marginEnd="@dimen/margin15sp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:text="@string/unit_edit_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10sp"
                android:layout_marginTop="@dimen/margin10sp"
                android:layout_marginEnd="@dimen/margin10sp"
                android:background="@drawable/background_goal_button"
                android:paddingTop="@dimen/padding5sp"
                android:paddingBottom="@dimen/padding5sp"
                app:layout_constraintTop_toBottomOf="@+id/rvConstraintGoal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:text="@string/new_goal_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintBestOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin25sp"
                app:layout_constraintTop_toBottomOf="@+id/constraintGoalButton">

                <TextView
                    android:id="@+id/txtBestOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin20sp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:text="@string/best_offer_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBestOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtBestOffer"
                    tools:listitem="@layout/item_image_list"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintSuggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin25sp"
                app:layout_constraintTop_toBottomOf="@+id/constraintBestOffer">

                <TextView
                    android:id="@+id/textSuggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin20sp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:text="@string/suggest_for_you_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSuggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textSuggest"
                    tools:listitem="@layout/item_image_list"
                    tools:orientation="horizontal" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

