<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/padding90sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rvConstraintGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundGoal"
                android:padding="@dimen/padding20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtTitleAchievement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:text="@string/title_goal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size50sp"
                    android:background="@color/white"
                    android:inputType="numberDecimal"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitleAchievement" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/typeGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10sp"
                android:layout_marginTop="@dimen/margin10sp"
                android:layout_marginEnd="@dimen/margin20sp"
                android:layout_marginBottom="@dimen/margin20sp"
                app:layout_constraintTop_toBottomOf="@+id/rvConstraintGoal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGoalType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_goal_type_detail" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintAmount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size60dp"
                android:background="@drawable/background_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/typeGoal"
                android:layout_marginTop="@dimen/margin30sp"
                android:layout_marginStart="@dimen/margin20sp"
                android:layout_marginEnd="@dimen/margin20sp"
                android:padding="@dimen/padding10sp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:hint="@string/hint_amount_edit_text"
                    android:textSize="@dimen/textSize20dp"
                    android:layout_marginEnd="@dimen/margin50sp"
                    android:background="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_edit_text"
                    android:textSize="@dimen/textSize20dp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:textColor="@color/colorYellow"
                    android:layout_marginStart="@dimen/margin5sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/edt_amount"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintDateSpinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size60dp"
                android:background="@drawable/background_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/constraintAmount"
                android:layout_marginStart="@dimen/margin20sp"
                android:layout_marginEnd="@dimen/margin20sp"
                android:layout_marginTop="@dimen/margin20sp"
                android:padding="@dimen/padding10sp"
                >

                <TextView
                    android:id="@+id/spinnerDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_select_date_edit_text"
                    android:textSize="@dimen/textSize20dp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:layout_width="@dimen/size30sp"
                    android:layout_height="@dimen/size25sp"
                    android:layout_marginEnd="@dimen/margin10sp"
                    app:layout_constraintTop_toTopOf="@+id/spinnerDate"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_spinner"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/titleBankAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_account"
                android:fontFamily="@font/sukhumvitset_bold"
                android:textSize="@dimen/textSize20dp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin30sp"
                android:layout_marginStart="@dimen/margin20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintDateSpinner"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintAccountSpinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size60dp"
                android:background="@drawable/background_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/titleBankAccount"
                android:layout_marginStart="@dimen/margin20sp"
                android:layout_marginEnd="@dimen/margin20sp"
                android:layout_marginTop="@dimen/margin10sp"
                android:padding="@dimen/padding10sp"
                >

                <TextView
                    android:id="@+id/spinnerAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_select_account_edit_text"
                    android:textSize="@dimen/textSize20dp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:layout_width="@dimen/size30sp"
                    android:layout_height="@dimen/size25sp"
                    android:layout_marginEnd="@dimen/margin10sp"
                    app:layout_constraintTop_toTopOf="@+id/spinnerAccount"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerAccount"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_spinner"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintPay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size60dp"
                android:background="@drawable/background_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/constraintAccountSpinner"
                android:layout_marginTop="@dimen/margin20sp"
                android:layout_marginStart="@dimen/margin20sp"
                android:layout_marginEnd="@dimen/margin20sp"
                android:padding="@dimen/padding10sp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_pay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:hint="@string/hint_amount_edit_text"
                    android:textSize="@dimen/textSize20dp"
                    android:layout_marginEnd="@dimen/margin50sp"
                    android:background="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_edit_month_text"
                    android:textSize="@dimen/textSize20dp"
                    android:fontFamily="@font/sukhumvitset_bold"
                    android:textColor="@color/colorYellow"
                    android:layout_marginStart="@dimen/margin5sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>